--- a/ooxx/ooxx.css
+++ b/ooxx/ooxx.css
@@ -13,14 +13,13 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-color: rgba(70, 219, 219, 0.59);
-    grid-gap: 3px;
     border: 3px solid rgba(70, 219, 219, 0.59);
 }
 
     #playground > div { /* tile */
         background-size: 100% 100%;
         background-color: white;
+        border: 1px solid rgba(70, 219, 219, 0.59);
     }
 
 @keyframes blinker {
