--- a/snake/snake.css
+++ b/snake/snake.css
@@ -24,7 +24,7 @@
 
     .snake.head {
         background-color: red;
-        z-index:100;
+        z-index: 100;
     }
 
 .food {
@@ -35,7 +35,7 @@
 @keyframes blink {
     50% {
         opacity: 0.3;
-        background-color:red;
+        background-color: red;
     }
 }
 
@@ -57,4 +57,21 @@
     border: 3px solid rgba(221, 201, 255, 0.8);
     border-radius: 3px;
     background-color: rgba(115, 193, 248, 0.8);
+}
+
+#config-btn {
+    border: 1px solid skyblue;
+    border-radius: 50% 50%;
+    padding: 10px;
+    background-color: lightgray;
+}
+
+#config-app {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    border: 1px solid skyblue;
+    border-radius: 10px 10px;
+    padding: 10px;
+    background-color:snow
 }
