--- a/game-of-life/game-of-life.css
+++ b/game-of-life/game-of-life.css
@@ -23,9 +23,19 @@
 }
 
     .cell[data-status="0"] {
-        opacity:0;
+        opacity: 0;
     }
 
     .cell[data-status="1"] {
-        background-color:aquamarine;
+        background-color: aquamarine;
     }
+
+#options {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border: 2px solid lightgray;
+    padding: 2px;
+    border-radius: 2px;
+    background-color: snow;
+}
