--- a/game-of-life/game-of-life.css
+++ b/game-of-life/game-of-life.css
@@ -38,4 +38,7 @@
     padding: 2px;
     border-radius: 2px;
     background-color: snow;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 2px
 }
