--- a/game-of-life/game-of-life.css
+++ b/game-of-life/game-of-life.css
@@ -42,3 +42,8 @@
     grid-template-columns: auto auto;
     grid-gap: 2px
 }
+
+    #options .full-row {
+        grid-column-start: 1;
+        grid-column-end: 3
+    }
